--- a/app/views/journal_entries/_editor.html.erb
+++ b/app/views/journal_entries/_editor.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 </datalist>
 
-<div class="max-w-6xl mx-auto min-h-screen" data-controller="journal-entry-editor">
+<div class="max-w-6xl mx-auto min-h-screen font-mono" data-controller="journal-entry-editor">
   <div class="bg-white border-4 border-black shadow-2xl">
     <div class="flex justify-between items-center bg-gray-100 px-8 py-6 border-b-4 border-black">
       <h1 class="text-3xl font-mono tracking-wide">仕訳入力</h1>
@@ -37,48 +37,109 @@
         </div>
       <% end %>
 
-      <div class="border-2 border-black mb-8">
-        <div class="grid grid-cols-2 gap-0">
-          <%= form.label :entry_date, "仕訳日", class: "block w-full h-full border-[0.5] border-black bg-gray-100 py-2 text-center font-mono" %>
-          <%= form.date_field :entry_date, autofocus: true, class: "w-full h-full px-2 py-2 border-l-[0.5] border-b-[0.5] font-mono text-sm focus:outline-none focus:bg-yellow-100" %>
-        </div>
-        <div class="grid grid-cols-2 gap-0">
-          <%= form.label :summary, "摘要", class: "block w-full h-full border-[0.5] border-black bg-gray-100 py-2 text-center font-mono" %>
-          <%= form.text_field :summary, placeholder: "取引の内容を入力してください", class: "w-full h-full px-2 py-2 border-l-[0.5] border-y-[0.5] font-mono text-sm focus:outline-none focus:bg-yellow-100" %>
-        </div>
+      <table class="border-collapse border-2 mb-4">
+        <tr>
+          <th scope="row" colspan="2" class="border">
+            <%= form.label :entry_date, "仕訳日", class: "block w-full h-full border-black bg-gray-100 py-2 text-center text-sm" %>
+          </th>
+          <td colspan="2" class="border">
+            <%= form.date_field :entry_date, autofocus: true, class: "block w-full h-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row" colspan="2" class="border">
+            <%= form.label :summary, "摘要", class: "block w-full h-full border-black bg-gray-100 py-2 text-center text-sm" %>
+          </th>
+          <td colspan="2" class="border">
+            <%= form.text_field :summary, placeholder: "取引の内容を入力してください", class: "block w-full h-full px-2 py-2 text-sm focus:outline-none focus:bg-yellow-100" %>
+          </td>
+        </tr>
 
-        <div class="grid grid-cols-12">
-          <!-- 借方ヘッダー -->
-          <div class="col-span-6 bg-gray-100 py-2 text-center font-mono border-[0.5] border-black">
-            借方
-          </div>
-          <!-- 貸方ヘッダー -->
-          <div class="col-span-6 bg-gray-100 py-2 text-center font-mono border-[0.5] border-black">
-            貸方
-          </div>
-          <!-- 借方列ヘッダー -->
-          <div class="col-span-3 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">勘定科目</div>
-          <div class="col-span-3 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">金額</div>
-            <!-- 貸方列ヘッダー -->
-          <div class="col-span-3 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">勘定科目</div>
-          <div class="col-span-3 border-[0.5] border-black bg-gray-100 py-2 text-center font-mono text-sm">金額</div>
+        <tr>
+          <th colspan="2" class="border">
+            <div class="bg-gray-100 py-2 text-center text-sm">
+              借方
+            </div>
+          </th>
+          <th colspan="2" class="border">
+            <div class="bg-gray-100 py-2 text-center text-sm">
+              貸方
+            </div>
+          </th>
+        </tr>
 
-          <!-- 明細行 -->
-          <% @journal_entry_lines.each_with_index do |line, idx| %>
-            <%= render "line",
-                field_name: "journal_entry[journal_entry_lines_attributes][#{idx}]",
-                side: line.side,
-                accounts: @accounts,
-                selected_account_name: line.account_name,
-                amount_value: line.formatted_amount_for_input,
-                is_persisted: line.persisted?,
-                line_id: line.persisted? ? line.id : nil %>
-          <% end %>
-        </div>
-      </div>
+        <tr>
+          <th scope="col" class="border">
+            <div class="bg-gray-100 py-2 text-center text-sm">勘定科目</div>
+          </th>
+          <th scope="col" class="border">
+            <div class="bg-gray-100 py-2 text-center text-sm">金額</div>
+          </th>
+          <th scope="col" class="border">
+            <div class="bg-gray-100 py-2 text-center text-sm">勘定科目</div>
+          </th>
+          <th scope="col" class="border">
+            <div class="bg-gray-100 py-2 text-center text-sm">金額</div>
+          </th>
+        </tr>
 
-      <div class="flex justify-center mt-8">
-        <%= form.submit "保存", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black font-mono text-xl tracking-widest cursor-pointer" %>
+        <% @journal_entry_lines.each_slice(2).with_index do |line, idx| %>
+          <% debit_line, credit_line = line %>
+          <% debit_idx = 2 * idx %>
+          <% credit_idx = 2 * idx + 1 %>
+          <% debit_field_name = "journal_entry[journal_entry_lines_attributes][#{debit_idx}]" %>
+          <% credit_field_name = "journal_entry[journal_entry_lines_attributes][#{credit_idx}]" %>
+
+          <tr>
+            <%= hidden_field_tag "#{debit_field_name}[side]", "debit" %>
+            <% if debit_line.persisted? %>
+              <%= hidden_field_tag "#{debit_field_name}[id]", debit_line.id %>
+            <% end %>
+            <%= hidden_field_tag "#{credit_field_name}[side]", "credit" %>
+            <% if credit_line.persisted? %>
+              <%= hidden_field_tag "#{credit_field_name}[id]", credit_line.id %>
+            <% end %>
+
+            <td class="border">
+              <%= text_field_tag "#{debit_field_name}[account_name]",
+                  (@accounts.find { |a| a.name == debit_line.account_name }&.name if debit_line.account_name),
+                  { placeholder: "勘定科目",
+                    list: "accounts_datalist",
+                    class: "w-full h-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
+                    autocomplete: "off" } %>
+            </td>
+            <td class="border">
+              <%= number_field_tag "#{debit_field_name}[amount]",
+                  debit_line.formatted_amount_for_input,
+                  placeholder: "0",
+                  min: 1,
+                  max: 999999999999,
+                  step: "0.01",
+                  class: "w-full h-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
+            </td>
+            <td class="border">
+              <%= text_field_tag "#{credit_field_name}[account_name]",
+                  (@accounts.find { |a| a.name == credit_line.account_name }&.name if credit_line.account_name),
+                  { placeholder: "勘定科目",
+                    list: "accounts_datalist",
+                    class: "w-full h-full px-2 py-2 border-0 text-sm focus:outline-none focus:bg-yellow-100",
+                    autocomplete: "off" } %>
+            </td>
+            <td class="border">
+              <%= number_field_tag "#{credit_field_name}[amount]",
+                  credit_line.formatted_amount_for_input,
+                  placeholder: "0",
+                  min: 1,
+                  max: 999999999999,
+                  step: "0.01",
+                  class: "w-full h-full px-2 py-2 border-0 text-sm text-right focus:outline-none focus:bg-yellow-100" %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+
+      <div class="flex justify-center">
+        <%= form.submit "保存", class: "bg-black hover:bg-gray-800 focus:bg-gray-700 focus:ring-2 focus:ring-gray-400 focus:outline-none text-white py-4 px-12 border-2 border-black text-xl tracking-widest cursor-pointer" %>
       </div>
     <% end %>
   </div>
