--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -33,6 +33,8 @@
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
               <%= link_to "アカウント設定", user_path,
                 class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
+              <%= link_to "事業所設定", company_path,
+                class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all" %>
               <%= form_with url: session_path, method: :delete, local: true do |form| %>
                 <%= form.button "ログアウト", formmethod: :delete,
                     class: "w-full tracking-wide text-center text-black hover:bg-gray-100 px-3 py-2 transition-all cursor-pointer" %>
