--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,12 +7,39 @@
     <nav class="h-full flex flex-col justify-between">
       <div class="flex flex-col space-y-1">
         <% if company_selected? %>
-          <%= link_to "仕訳", journal_entries_path,
-              class: "tracking-wide text-black text-center hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
-          <%= link_to "勘定", general_ledger_path,
-              class: "tracking-wide text-black text-center hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
-          <%= link_to "決算", financial_closings_path,
-              class: "tracking-wide text-black text-center hover:bg-gray-100 px-3 py-2 border-2 border-transparent hover:border-black transition-all" %>
+          <div class="flex flex-col">
+            <%= link_to journal_entries_path,
+                "aria-label": "仕訳",
+                class: "tracking-wide text-black text-center hover:bg-gray-100 px-2 border-2 border-transparent hover:border-black transition-all cursor-pointer" do %>
+              <!-- https://heroicons.com/ -->
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 mx-auto my-2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0 0 12 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52 2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 0 1-2.031.352 5.988 5.988 0 0 1-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971Zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0 2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 0 1-2.031.352 5.989 5.989 0 0 1-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971Z" />
+              </svg>
+            <% end %>
+            <span class="text-xs text-center">仕訳</span>
+          </div>
+          <div class="flex flex-col">
+            <%= link_to general_ledger_path,
+                "aria-label": "勘定",
+                class: "tracking-wide text-black text-center hover:bg-gray-100 px-2 border-2 border-transparent hover:border-black transition-all cursor-pointer" do %>
+              <!-- https://heroicons.com/ -->
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 mx-auto my-2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m1.5 9 2.25 3m0 0 2.25-3m-2.25 3v4.5M9.75 15h4.5m-4.5 2.25h4.5m-3.75-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+              </svg>
+            <% end %>
+            <span class="text-xs text-center">勘定</span>
+          </div>
+          <div class="flex flex-col">
+            <%= link_to financial_closings_path,
+                "aria-label": "決算",
+                class: "tracking-wide text-black text-center hover:bg-gray-100 px-2 border-2 border-transparent hover:border-black transition-all cursor-pointer" do %>
+              <!-- https://heroicons.com/ -->
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" class="size-8 mx-auto my-2">
+                <path strokeLinecap="round" strokeLinejoin="round" d="M7.5 14.25v2.25m3-4.5v4.5m3-6.75v6.75m3-9v9M6 20.25h12A2.25 2.25 0 0 0 20.25 18V6A2.25 2.25 0 0 0 18 3.75H6A2.25 2.25 0 0 0 3.75 6v12A2.25 2.25 0 0 0 6 20.25Z" />
+              </svg>
+            <% end %>
+            <span class="text-xs text-center">決算</span>
+          </div>
         <% end %>
       </div>
       <div class="flex flex-col space-y-1 mb-12">
@@ -20,6 +47,7 @@
           <button popovertarget="company-menu"
             aria-label="事業所メニュー"
             class="tracking-wide text-black text-center hover:bg-gray-100 px-2 border-2 border-transparent hover:border-black transition-all cursor-pointer">
+            <!-- https://heroicons.com/ -->
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 mx-auto my-2">
               <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 21h19.5m-18-18v18m10.5-18v18m6-13.5V21M6.75 6.75h.75m-.75 3h.75m-.75 3h.75m3-6h.75m-.75 3h.75m-.75 3h.75M6.75 21v-3.375c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21M3 3h12m-.75 4.5H21m-3.75 3.75h.008v.008h-.008v-.008Zm0 3h.008v.008h-.008v-.008Zm0 3h.008v.008h-.008v-.008Z" />
             </svg>
@@ -45,6 +73,7 @@
           <button popovertarget="user-profile-menu"
             aria-label="ユーザープロフィールメニュー"
             class="tracking-wide text-black text-center hover:bg-gray-100 px-2 border-2 border-transparent hover:border-black transition-all cursor-pointer">
+            <!-- https://heroicons.com/ -->
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 mx-auto my-2">
               <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
             </svg>
