--- a/app/views/general_ledgers/show.html.erb
+++ b/app/views/general_ledgers/show.html.erb
@@ -1,128 +1,124 @@
-<div class="max-w-6xl min-w-2xs sm:min-w-2xl md:min-w-3xl mx-auto min-h-screen">
-  <div class="bg-white border-4 border-black shadow-2xl">
-    <div class="bg-gray-100 px-8 py-6 border-b-4 border-black flex justify-between items-center">
-      <h1 class="text-3xl tracking-wide">総勘定元帳</h1>
+<div class="px-8 py-4 flex items-center">
+  <h1 class="text-3xl tracking-wide">総勘定元帳</h1>
+</div>
+
+<p class="font-bold text-center"><%= @from.strftime('%Y年%m月%d日') %> ~ <%= @to.strftime('%Y年%m月%d日') %></p>
+<div class="container mx-auto p-8 space-y-2">
+  <% if @gl.account_tables.empty? %>
+    <div class="text-center">
+      仕訳が登録されていません
     </div>
+  <% end %>
 
-    <p class="font-bold text-center m-4"><%= @from.strftime('%Y年%m月%d日') %> ~ <%= @to.strftime('%Y年%m月%d日') %></p>
-    <div class="p-8 space-y-2">
-      <% if @gl.account_tables.empty? %>
-        <div class="text-center">
-          仕訳が登録されていません
-        </div>
-      <% end %>
+  <% @gl.account_tables.each do |account_name, account_table| %>
+    <div>
+      <h2 class="text-2xl tracking-wide mb-4 text-center"><%= account_name %></h2>
+      <table class="w-full border-collapse border-2 mb-4">
+        <colgroup>
+          <col span="3" class="w-1/6">
+          <col span="3" class="w-1/6">
+        </colgroup>
+        <tbody>
+          <tr>
+            <th scope="column" colspan="3" class="border">
+              <div class="w-full h-full bg-gray-100 py-2 text-center">借方</div>
+            </th>
+            <th scope="column" colspan="3" class="border">
+              <div class="w-full h-full bg-gray-100 py-2 text-center">貸方</div>
+            </th>
+          </tr>
 
-      <% @gl.account_tables.each do |account_name, account_table| %>
-        <div>
-          <h2 class="text-2xl tracking-wide mb-4 text-center"><%= account_name %></h2>
-          <table class="w-full border-collapse border-2 mb-4">
-            <colgroup>
-              <col span="3" class="w-1/6">
-              <col span="3" class="w-1/6">
-            </colgroup>
-            <tbody>
-              <tr>
-                <th scope="column" colspan="3" class="border">
-                  <div class="w-full h-full bg-gray-100 py-2 text-center">借方</div>
-                </th>
-                <th scope="column" colspan="3" class="border">
-                  <div class="w-full h-full bg-gray-100 py-2 text-center">貸方</div>
-                </th>
-              </tr>
+          <% i = 0 %>
+          <% loop do |line| %>
+            <% debit_line = account_table.debit_lines[i] %>
+            <% credit_line = account_table.credit_lines[i] %>
+            <% break if debit_line.blank? && credit_line.blank? %>
 
-              <% i = 0 %>
-              <% loop do |line| %>
-                <% debit_line = account_table.debit_lines[i] %>
-                <% credit_line = account_table.credit_lines[i] %>
-                <% break if debit_line.blank? && credit_line.blank? %>
-
-                <tr>
-                  <td>
-                    <div class="w-full h-full py-2 text-center">
-                      <%= debit_line&.entry_date&.strftime('%Y/%m/%d') %>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="w-full h-full py-2 text-center">
-                      <%= debit_line&.opponent_account_name %>
-                    </div>
-                  </td>
-                  <td class="border-r">
-                    <div class="w-full h-full py-2 pr-2 text-right">
-                      <%= number_to_currency(debit_line&.amount, unit: "", precision: 0, delimiter: ",") %>
-                      <% if debit_line %>
-                        <% if debit_line.entry_id %>
-                          <a href="<%= edit_journal_entry_path(debit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
-                            <!-- https://heroicons.com/ -->
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
-                              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
-                            </svg>
-                          </a>
-                        <% else %>
-                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
-                          </svg>
-                        <% end %>
-                      <% end %>
-                    </div>
-                  </td>
-                  <td class="border-l">
-                    <div class="w-full h-full py-2 text-center">
-                      <%= credit_line&.entry_date&.strftime('%Y/%m/%d') %>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="w-full h-full py-2 text-center">
-                      <%= credit_line&.opponent_account_name %>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="w-full h-full py-2 pr-2 text-right">
-                      <%= number_to_currency(credit_line&.amount, unit: "", precision: 0, delimiter: ",") %>
-                      <% if credit_line %>
-                        <% if credit_line.entry_id %>
-                          <a href="<%= edit_journal_entry_path(credit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
-                            <!-- https://heroicons.com/ -->
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
-                              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
-                            </svg>
-                          </a>
-                        <% else %>
-                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
-                          </svg>
-                        <% end %>
-                      <% end %>
-                    </div>
-                  </td>
-                </tr>
-
-                <% i += 1 %>
-              <% end %>
-
-              <% balance = account_table.balance %>
-              <% if balance.amount.positive? %>
-                <tr>
-                  <td colspan="3" class="border-r border-t">
-                    <% if balance.side == "debit" %>
-                      <div class="w-full h-full py-2 text-center">
-                        借方残高 <%= number_to_currency(balance.amount, unit: "", precision: 0, delimiter: ",") %>
-                      </div>
+            <tr>
+              <td>
+                <div class="w-full h-full py-2 text-center">
+                  <%= debit_line&.entry_date&.strftime('%Y/%m/%d') %>
+                </div>
+              </td>
+              <td>
+                <div class="w-full h-full py-2 text-center">
+                  <%= debit_line&.opponent_account_name %>
+                </div>
+              </td>
+              <td class="border-r">
+                <div class="w-full h-full py-2 pr-2 text-right">
+                  <%= number_to_currency(debit_line&.amount, unit: "", precision: 0, delimiter: ",") %>
+                  <% if debit_line %>
+                    <% if debit_line.entry_id %>
+                      <a href="<%= edit_journal_entry_path(debit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
+                        <!-- https://heroicons.com/ -->
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                        </svg>
+                      </a>
+                    <% else %>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                      </svg>
                     <% end %>
-                  </td>
-                  <td colspan="3" class="border-l border-t">
-                    <% if balance.side == "credit" %>
-                      <div class="w-full h-full py-2 text-center">
-                        貸方残高 <%= number_to_currency(balance.amount, unit: "", precision: 0, delimiter: ",") %>
-                      </div>
+                  <% end %>
+                </div>
+              </td>
+              <td class="border-l">
+                <div class="w-full h-full py-2 text-center">
+                  <%= credit_line&.entry_date&.strftime('%Y/%m/%d') %>
+                </div>
+              </td>
+              <td>
+                <div class="w-full h-full py-2 text-center">
+                  <%= credit_line&.opponent_account_name %>
+                </div>
+              </td>
+              <td>
+                <div class="w-full h-full py-2 pr-2 text-right">
+                  <%= number_to_currency(credit_line&.amount, unit: "", precision: 0, delimiter: ",") %>
+                  <% if credit_line %>
+                    <% if credit_line.entry_id %>
+                      <a href="<%= edit_journal_entry_path(credit_line.entry_id) %>" aria-label="仕訳帳" target="_blank">
+                        <!-- https://heroicons.com/ -->
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
+                        </svg>
+                      </a>
+                    <% else %>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline size-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                      </svg>
                     <% end %>
-                  </td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      <% end %>
+                  <% end %>
+                </div>
+              </td>
+            </tr>
+
+            <% i += 1 %>
+          <% end %>
+
+          <% balance = account_table.balance %>
+          <% if balance.amount.positive? %>
+            <tr>
+              <td colspan="3" class="border-r border-t">
+                <% if balance.side == "debit" %>
+                  <div class="w-full h-full py-2 text-center">
+                    借方残高 <%= number_to_currency(balance.amount, unit: "", precision: 0, delimiter: ",") %>
+                  </div>
+                <% end %>
+              </td>
+              <td colspan="3" class="border-l border-t">
+                <% if balance.side == "credit" %>
+                  <div class="w-full h-full py-2 text-center">
+                    貸方残高 <%= number_to_currency(balance.amount, unit: "", precision: 0, delimiter: ",") %>
+                  </div>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
-  </div>
+  <% end %>
 </div>
